Adding link to GCTools

--- a/src/gcintranet/top.ejs
+++ b/src/gcintranet/top.ejs
@@ -100,6 +100,7 @@ if (pr.subTheme === 'eccc') {
                                         <li><a href="<^- msg('https://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002') ^>" class="<^- msg('GCTBannerOnclick-eng') ^>"><^- msg('<span class="bold-gc">GC</span>directory') ^></a></li>
                                         <li><a href="<^- msg('https://gccollab.ca/splash/') ^>" class="<^- msg('GCTBannerOnclick-eng') ^>"><^- msg('<span class="bold-gc">GC</span>collab') ^></a></li>
                                         <li><a href="<^- msg('https://intranet.canada.ca/index-eng.asp') ^>" class="<^- msg('GCTBannerOnclick-eng') ^>"><^- msg('<span class="bold-gc">GC</span>intranet') ^></a></li>
+                                        <li><a href="<^- msg('https://iservice.prv/eng/imit/catalogue/gcxchange/index.shtml') ^>" class="<^- msg('GCTBannerOnclick-eng') ^>"><^- msg('gcexchange') ^></a></li>
                                     </ul>
                                 </div>
                             </section>
