Introducing ExternalResGatherer.js, fixes to TestLinks

--- a/src/gcintranet/appFooter.ejs
+++ b/src/gcintranet/appFooter.ejs
@@ -51,7 +51,7 @@
                         <ul class="list-unstyled">
                             <li><a href="<^- msg('https://esdc.prv/en/branches_regions/index.shtml') ^>"><^- msg('ESDC/SC Intranet') ^></a></li>
                             <li><a href="<^- msg('https://esdc.prv/en/news/index.shtml') ^>"><^- msg('News') ^></a></li>
-                            <li><a href="<^- msg('https://esdc.prv/en/contact/index.shtml') ^>"><^- msg('Contact and Feedback') ^></a></li>
+                            <li><a href="<^- msg('https://esdc.prv/en/feedback/index.shtml') ^>"><^- msg('Contact and Feedback') ^></a></li>
                             <li><a href="<^- msg('https://esdc.prv/en/stay_connected/index.shtml') ^>"><^- msg('Stay Connected') ^></a></li>
                             <li><a href="<^- msg('https://edsc.prv/en/help.shtml') ^>"><^- msg('Help and Important Notices') ^></a></li>
                         </ul>
