--- a/src/gcintranet/top.ejs
+++ b/src/gcintranet/top.ejs
@@ -95,12 +95,12 @@ if (pr.subTheme === 'eccc') {
                                 </header>
                                 <div class="modal-body">
                                     <ul class="list-unstyled lst-spcd">
+                                        <li><a href="<^- msg('https://iservice.prv/eng/imit/catalogue/gcxchange/index.shtml') ^>" class="<^- msg('GCTBannerOnclick-eng') ^>"><^- msg('<span class="bold-gc">GC</span>Xchange') ^></a></li>
                                         <li><a href="<^- msg('https://gcconnex.gc.ca/splash/') ^>" class="<^- msg('GCTBannerOnclick-eng') ^>"><^- msg('<span class="bold-gc">GC</span>connex') ^></a></li>
                                         <li><a href="<^- msg('https://www.gcpedia.gc.ca/wiki/?setlang=en') ^>" class="<^- msg('GCTBannerOnclick-eng') ^>"><^- msg('<span class="bold-gc">GC</span>pedia') ^></a></li>
                                         <li><a href="<^- msg('https://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002') ^>" class="<^- msg('GCTBannerOnclick-eng') ^>"><^- msg('<span class="bold-gc">GC</span>directory') ^></a></li>
                                         <li><a href="<^- msg('https://gccollab.ca/splash/') ^>" class="<^- msg('GCTBannerOnclick-eng') ^>"><^- msg('<span class="bold-gc">GC</span>collab') ^></a></li>
                                         <li><a href="<^- msg('https://intranet.canada.ca/index-eng.asp') ^>" class="<^- msg('GCTBannerOnclick-eng') ^>"><^- msg('<span class="bold-gc">GC</span>intranet') ^></a></li>
-                                        <li><a href="<^- msg('https://iservice.prv/eng/imit/catalogue/gcxchange/index.shtml') ^>" class="<^- msg('GCTBannerOnclick-eng') ^>"><^- msg('gcexchange') ^></a></li>
                                     </ul>
                                 </div>
                             </section>
