still wip, remaining html validate error in WET code

--- a/src/gcweb/footer.ejs
+++ b/src/gcweb/footer.ejs
@@ -8,7 +8,7 @@
  * @param? hideFooterMain Used to determine if the main footer will be displayed.
  * @param? hideFooterCorporate Used to determine if the corportate footer links will be displayed.
 -%>
-<footer role="contentinfo" id="wb-info">
+<footer id="wb-info">
     <h2 class="wb-inv"><^- msg('About this site') ^></h2>
     <%_ if (pr.contextualFooter != null) { -%>
         <div class="gc-contextual">
