--- a/src/gcweb/splash.ejs
+++ b/src/gcweb/splash.ejs
@@ -27,14 +27,14 @@
                 </div>
             </div>
             <div class="row cdts-splash">
-                <section class="col-xs-6 text-right" lang="en">
+                <section class="col-xs-6 text-right" lang="en" aria-label="cdts-enGovCanada">
                     <%_ if (pr.nameEng != null) { -%>
                         <h2><%= pr.nameEng %></h2>
                     <%_ } else { -%>
                         <h2 class="wb-inv">Government of Canada</h2>
                     <%_ } -%>
                 </section>
-                <section class="col-xs-6" lang="fr">
+                <section class="col-xs-6" lang="fr" aria-label="cdts-frGovCanada">
                     <%_ if (pr.nameFra != null) { -%>
                         <h2><%= pr.nameFra %></h2>
                     <%_ } else { -%>
