--- a/src/gcweb/appFooter.ejs
+++ b/src/gcweb/appFooter.ejs
@@ -11,8 +11,8 @@
         <%_ if (pr.footerSections != null && Array.isArray(pr.footerSections)) pr.footerSections = { links: pr.footerSections } -%>
         <div class="gc-contextual">
             <div class="container">
-                <nav>
-                    <h2 class="wb-inv"><^- msg('Related links') ^></h2>
+                <nav aria-labelledby="cdts-appFooterLinks">
+                    <h2 class="wb-inv" id="cdts-appFooterLinks"><^- msg('Related links') ^></h2>
                     <%_ if (pr.footerSections != null && pr.footerSections.title != null) { -%> <h3><%= pr.footerSections.title %></h3> <%_ } -%>
                     <ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
                         <%_ if (pr.contactLink != null && pr.contactLink.length > 0) { -%>
